fix: align tooltips, seams

--- a/src/common/components/breadcrumbs/breadcrumbs.less
+++ b/src/common/components/breadcrumbs/breadcrumbs.less
@@ -3,18 +3,5 @@
 .jdn {
   &__breadcrumbs {
     overflow-wrap: anywhere;
-
-    & .ant-tooltip-inner {
-      max-height: 350px;
-      overflow-y: clip;
-      display: -webkit-box;
-      -webkit-line-clamp: 15;
-      -webkit-box-orient: vertical;
-    }
-
-    & .ant-tooltip {
-      word-break: break-all;
-      max-width: 100%;
-    }
   }
 }
