--- a/src/features/locators/styles/locator.less
+++ b/src/features/locators/styles/locator.less
@@ -73,3 +73,6 @@
       }
     }
 }
+.ant-tooltip-content {
+  margin-top: -1px;
+}
